--- a/11index.html
+++ b/11index.html
@@ -3,97 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music App</title>
+    <title>Music45</title>
     <link rel="stylesheet" href="11styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <!-- Genre Grid -->
-        <div class="genre-grid">
-            <div class="genre-card gradient-1">Trending</div>
-            <div class="genre-card gradient-2">Malayalam</div>
-            <div class="genre-card gradient-3">Cooking & Dining</div>
-            <div class="genre-card gradient-4">Student</div>
-            <div class="genre-card gradient-5">Ambient</div>
-            <div class="genre-card gradient-6">Tamil</div>
-        </div>
 
-        <!-- Recently Played Section -->
-        <div class="recently-played">
-            <h2>Recently Played</h2>
-            <div class="scroll-container">
-                <div class="playlist-cards">
-                    <div class="playlist-card">
-                        <div class="image-container">
-                            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/footer%20change.jpg-mXx7FjBchHfByiFuDKXrrG6lExauN7.jpeg" alt="Hot Hits Hindi">
-                            <button class="play-button">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <polygon points="5 3 19 12 5 21 5 3"/>
-                                </svg>
-                            </button>
-                        </div>
-                        <h3>Hot Hits Hindi</h3>
-                        <p>Hottest Hindi music that India...</p>
-                    </div>
-                    <div class="playlist-card">
-                        <div class="image-container">
-                            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/footer%20change.jpg-mXx7FjBchHfByiFuDKXrrG6lExauN7.jpeg" alt="Trending Now Telugu">
-                            <button class="play-button">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <polygon points="5 3 19 12 5 21 5 3"/>
-                                </svg>
-                            </button>
-                        </div>
-                        <h3>Trending Now Telugu</h3>
-                        <p>Trending songs from Tollywood!</p>
-                    </div>
-                    <div class="playlist-card">
-                        <div class="image-container">
-                            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/footer%20change.jpg-mXx7FjBchHfByiFuDKXrrG6lExauN7.jpeg" alt="Sacred Games">
-                            <button class="play-button">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <polygon points="5 3 19 12 5 21 5 3"/>
-                                </svg>
-                            </button>
-                        </div>
-                        <h3>Sacred Games</h3>
-                        <p>Only for Sacred Games Heartthrobs</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Playback Bar -->
-        <div class="playback-bar">
-            <div class="now-playing">
-                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/footer%20change.jpg-mXx7FjBchHfByiFuDKXrrG6lExauN7.jpeg" alt="Current track">
-                <div class="track-info">
-                    <h3>Kabhi Kabhi Aditi</h3>
-                    <p>Rashid Ali</p>
-                </div>
-            </div>
-            <div class="controls">
-                <button class="control-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <polygon points="19 20 9 12 19 4 19 20"/>
-                        <line x1="5" y1="19" x2="5" y2="5"/>
-                    </svg>
-                </button>
-                <button class="play-button-large">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <polygon points="5 3 19 12 5 21 5 3"/>
-                    </svg>
-                </button>
-                <button class="control-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <polygon points="5 4 15 12 5 20 5 4"/>
-                        <line x1="19" y1="5" x2="19" y2="19"/>
-                    </svg>
-                </button>
-            </div>
-        </div>
+    <!-- Genre Selection -->
+    <div class="genre-grid">
+        <div class="genre-card gradient-1" id="hindi-btn">Hindi</div>
+        <div class="genre-card gradient-2" id="english-btn">English</div>
+        <div class="genre-card gradient-3" id="marathi-btn">Marathi</div>
+        <div class="genre-card gradient-4" id="telugu-btn">Telugu</div>
     </div>
-    <script src="11main.js"></script>
+
+    <!-- Playlist Container (Initially Hidden) -->
+    <div id="song-list" class="hidden">
+        <button id="back-btn">⬅ Back</button>
+        <ul id="song-list"></ul>
+    </div>
+
+    <!-- Main Content (Footer) -->
+ <div id="footer-controls" class="footer-controls">
+  <div id="footer-song-info" class="footer-song-info">
+    <img id="footer-cover-image" class="footer-cover" src="cover1.jpg" alt="Cover" />
+    <p id="footer-song-title">Song Title 1</p>
+    <p id="footer-artist-name">Artist Name 1</p>
+  </div>
+  <div class="footer-controls-buttons">
+    <button id="footer-play-pause" class="footer-play-pause-btn">▶️</button>
+  </div>
+</div>
+
+  <!-- Music Banner (initially hidden) -->
+<div id="music-banner" class="music-player" style="display:none;">
+  <div class="player-container">
+    <button id="close-banner-btn" class="close-btn">
+      <i class="fas fa-chevron-down"></i>
+  </button>
+  <div class="album-cover">
+    <img id="banner-cover-image" class="banner-cover" src="cover1.jpg" alt="Album Cover">
+  </div>
+  <div class="song-info">
+    <h2 id="banner-song-title">Song Title 1</h2>
+    <p id="banner-artist-name">Artist Name 1</p>
+  </div>
+
+  <div class="progress-container">
+    <div class="progress-bar" id="progress-bar">
+        <div id="progress" class="progress"></div>
+    </div>
+    <div class="time-stamps">
+        <span id="current-time">00:00</span>
+        <span id="duration">00:00</span>
+    </div>
+  </div>
+
+  <div class="main-controls">
+    <button id="shuffle-btn" class="control-btn"><i class="fas fa-shuffle"></i></button>
+    <button id="prev" class="control-btn"><i class="fas fa-backward"></i></button>
+    <button id="banner-play-pause" class="play-btn"><i class="fas fa-play"></i></button>
+    <button id="next" class="control-btn"><i class="fas fa-forward"></i></button>
+    <button id="repeat-btn" class="control-btn"><i class="fas fa-repeat"></i></button>
+    
+    
+    <div id="shuffle-popup" class="popup">Shuffle: <span id="shuffle-status"></span></div>
+    <div id="repeat-popup" class="popup">Repeat: <span id="repeat-status"></span></div>  
+</div>
+
+  <div class="secondary-controls">
+    <button class="control-btn"><i class="fas fa-music"></i></button>
+    <button id="download-btn" class="control-btn"><i class="fas fa-download"></i></button>
+    <button class="control-btn"><i class="fas fa-heart"></i></button>
+    <button class="control-btn"><i class="fas fa-clock-rotate-left"></i></button>
+  </div>
+  </div>
+</div>
+
+    <script type="module" src="11main.js"></script>
 </body>
 </html>
