--- a/11index.html
+++ b/11index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music45</title>
+    <link rel="icon" type="image/webp" href="music/music45.webp">
     <link rel="stylesheet" href="11styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
