--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!-- Menu Button -->
   <button id="menu-btn" class="menu-btn">☰</button>
-
+  <button id="beta" class="beta" >BETA</button>
   <!-- Playlist Buttons inside the menu -->
   <div id="playlist-menu" class="playlist-menu">
     <button id="hindi-btn" class="control-button">Hindi</button>
