--- a/11index.html
+++ b/11index.html
@@ -36,8 +36,7 @@
 </div>
 
 
-
-<!-- Music Banner (initially hidden) -->
+  <!-- Music Banner (initially hidden) -->
 <div id="music-banner" class="music-player" style="display:none;">
   <div class="player-container">
     <button id="close-banner-btn" class="close-btn">
@@ -53,21 +52,18 @@
 
   <div class="progress-container">
     <div class="progress-bar" id="progress-bar">
-      <div id="progress" class="progress"></div>
+        <div id="progress" class="progress"></div>
     </div>
     <div class="time-stamps">
         <span id="current-time">00:00</span>
         <span id="duration">00:00</span>
     </div>
   </div>
-  
+
   <div class="main-controls">
     <button id="shuffle-btn" class="control-btn"><i class="fas fa-shuffle"></i></button>
     <button id="prev" class="control-btn"><i class="fas fa-backward"></i></button>
-    <button id="banner-play-pause">
-      <i id="banner-play-icon" class="fas fa-play"></i>
-      <i id="banner-loading-icon" class="fas fa-spinner fa-spin" style="display: none;"></i>
-    </button>
+    <button id="banner-play-pause" class="play-btn"><i class="fas fa-play"></i></button>
     <button id="next" class="control-btn"><i class="fas fa-forward"></i></button>
     <button id="repeat-btn" class="control-btn"><i class="fas fa-repeat"></i></button>
     
